tests/golden/extra-config/loki/loki/30_network_policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: allow-from-other-namespaces
    name: allow-from-other-namespaces
  name: allow-from-other-namespaces
  namespace: syn-loki
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - vshn-grafana
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/component
        operator: In
        values:
          - gateway
          - query-frontend
  policyTypes:
    - Ingress
